# accelerate-backend-kit

./: .gitignore  .gitmodules  DEVLOG.md  Makefile  README.md  TODO.md  Test.hs  accelerate-backend-kit.cabal  accelerate-cpu.cabal  accelerate-icc-opencl.cabal
Data/Array/Accelerate/: BackendClass.hs  C.hs  Cilk.hs  FinalAST.hs  OpenCL.hs  SimpleAST.hs  SimpleArray.hs  SimpleConverter.hs  SimpleInterp.hs  SimpleTests.hs
Data/Array/Accelerate/BackendKit/: CompilerPipeline.hs  CompilerUtils.hs  Phase1.hs  SimpleArray.hs  Tests.hs
Data/Array/Accelerate/BackendKit/IRs/: CLike.hs  GPUIR.hs  Metadata.hs  SimpleAcc.hs
Data/Array/Accelerate/BackendKit/IRs/GPUIR/: Interpreter.hs
Data/Array/Accelerate/BackendKit/IRs/Internal/: AccClone.hs
Data/Array/Accelerate/BackendKit/IRs/SimpleAcc/: Interpreter.hs
Data/Array/Accelerate/BackendKit/Passes/: DesugarUnit.hs  IRTypes.hs  LiftComplexRands.hs  LiftLets.hs  RemoveArrayTuple.hs  StaticTuples.hs  ToAccClone.hs
Data/Array/Accelerate/BackendKit/Phase1/: LiftLets.hs  RemoveArrayTuple.hs  StaticTuples.hs  ToAccClone.hs
Data/Array/Accelerate/BackendKit/Phase2/: DeadArrays.hs  DeadCode.hs  DesugToBackperm.hs  DesugToGenerate.hs  DesugarUnit.hs  ExplicitShapes.hs  FuseMaps.hs  InlineCheap.hs  NormalizeExps.hs  OneDimensionalize.hs  SizeAnalysis.hs  ToCLike.hs  TrackUses.hs  UnzipArrays.hs  UnzipETups.hs
Data/Array/Accelerate/BackendKit/Phase3/: DesugarFoldScan.hs  DesugarGenerate.hs  KernFreeVars.hs  LowerGPUIR.hs  ToGPUIR.hs
Data/Array/Accelerate/BackendKit/Utils/: EasyEmit.hs  Helpers.hs
Data/Array/Accelerate/Cilk/: JITRuntime.hs
Data/Array/Accelerate/OpenCL/: JITRuntime.hs
Data/Array/Accelerate/Shared/: EasyEmit.hs  EmitC.hs  EmitCommon.hs  EmitHelpers.hs  EmitOpenCL.hs
Data/Array/Accelerate/SimplePasses/: DesugarUnit.hs  IRTypes.hs  LiftComplexRands.hs  LiftLets.hs  LowerExps.hs  Lowering.hs  RemoveArrayTuple.hs  StaticTuples.hs
SCRAP/: icc_test.c
backend-kit/: .gitignore  DEVLOG.md  README.md  TODO.md  Test.hs  accelerate-backend-kit.cabal
backend-kit/Data/Array/Accelerate/: BackendClass.hs  DynamicAcc.hs  DynamicAcc2.hs
backend-kit/Data/Array/Accelerate/BackendKit/: CompilerPipeline.hs  CompilerUtils.hs  ConsoleTester.hs  SimpleArray.hs  Tests.hs
backend-kit/Data/Array/Accelerate/BackendKit/IRs/: CLike.hs  GPUIR.hs  Metadata.hs  SimpleAcc.hs
backend-kit/Data/Array/Accelerate/BackendKit/IRs/CLike/: Interpreter.hs
backend-kit/Data/Array/Accelerate/BackendKit/IRs/GPUIR/: Interpreter.hs
backend-kit/Data/Array/Accelerate/BackendKit/IRs/Internal/: AccClone.hs
backend-kit/Data/Array/Accelerate/BackendKit/IRs/SimpleAcc/: Interpreter.hs
backend-kit/Data/Array/Accelerate/BackendKit/Phase1/: LiftComplexRands.hs  LiftLets.hs  RemoveArrayTuple.hs  StaticTuples.hs  ToAccClone.hs  VerifySimpleAcc.hs
backend-kit/Data/Array/Accelerate/BackendKit/Phase2/: DeadCode.hs  DesugToBackperm.hs  DesugToGenerate.hs  EstimateCost.hs  ExplicitShapes.hs  FuseMaps.hs  InlineCheap.hs  NormalizeExps.hs  OneDimensionalize.hs  SizeAnalysis.hs  ToCLike.hs  TrackUses.hs  UnzipArrays.hs  UnzipETups.hs
backend-kit/Data/Array/Accelerate/BackendKit/Phase3/: DesugarFoldScan.hs  DesugarGenerate.hs  FuseGenReduce.hs  KernFreeVars.hs  ToGPUIR.hs
backend-kit/Data/Array/Accelerate/BackendKit/Utils/: Helpers.hs
backend-kit/tests/: SimpleAccInterpConf.hs  TestDynamicAcc.hs  TestInterp.hs  TestLiftDrop.hs  TestSimpleAccInterp.hs  UnitTests.hs
icc-opencl/: DEVLOG.md  Makefile  Test.hs  accelerate-icc-opencl.cabal  cabal.sandbox.config
icc-opencl/Data/Array/Accelerate/: C.hs  Cilk.hs  OpenCL.hs
icc-opencl/Data/Array/Accelerate/Cilk/: JITRuntime.hs
icc-opencl/Data/Array/Accelerate/OpenCL/: JITRuntime.hs
icc-opencl/Data/Array/Accelerate/Shared/: EasyEmit.hs  EmitC.hs  EmitCommon.hs  EmitHelpers.hs  EmitOpenCL.hs
icc-opencl/tests/: TestLiftDrop.hs  TestSeq.hs  UnitTests.hs
icc-opencl/tests/dynlink/: gen_code.c
more_tests/: Makefile  multidev-test.hs
tests/dynlink/: Makefile  test_dlopen.hs
