Name:                accelerate-backend-kit
Version:             0.13.0.0
Synopsis:            Simplified AST for Accelerate that makes it easy to build new backends.

-- Description:         

Homepage:            https://github.com/rrnewton/accelerate
License:             BSD3
License-file:        LICENSE
Author:              Ryan R. Newton
Maintainer:          rrnewton@gmail.com

Category:            Language

Build-type:          Simple

-- Extra files to be distributed with the package, such as examples or
-- a README.
-- Extra-source-files:  

-- Constraint on the version of Cabal needed to build this package.
Cabal-version:       >=1.2


Library
  Exposed-modules:
                     Data.Array.Accelerate.BackendKit.Tests
                     Data.Array.Accelerate.BackendKit.CompilerPipeline
                     Data.Array.Accelerate.BackendKit.IRs.GPUIR
                     Data.Array.Accelerate.BackendKit.IRs.GPUIR.Interpreter
                     Data.Array.Accelerate.BackendKit.IRs.CLike
                     Data.Array.Accelerate.BackendKit.IRs.CLike.Interpreter                     
                     Data.Array.Accelerate.BackendKit.IRs.SimpleAcc
                     Data.Array.Accelerate.BackendKit.IRs.SimpleAcc.Interpreter
                     Data.Array.Accelerate.BackendKit.IRs.Metadata
                     Data.Array.Accelerate.BackendKit.SimpleArray
  
  -- Modules not exported by this package:
  Other-modules:       
                     Data.Array.Accelerate.BackendKit.IRs.Internal.AccClone
                     Data.Array.Accelerate.BackendKit.Utils.Helpers                     
                     Data.Array.Accelerate.BackendKit.Utils.EasyEmit
                     Data.Array.Accelerate.BackendKit.Phase1.LiftLets
                     Data.Array.Accelerate.BackendKit.Phase1.LiftComplexRands
                     Data.Array.Accelerate.BackendKit.Phase1.RemoveArrayTuple
                     Data.Array.Accelerate.BackendKit.Phase1.StaticTuples
                     Data.Array.Accelerate.BackendKit.Phase2.DesugarUnit
                     Data.Array.Accelerate.BackendKit.Phase2.DesugToBackperm
                     Data.Array.Accelerate.BackendKit.Phase2.DesugToGenerate
                     Data.Array.Accelerate.BackendKit.Phase2.EstimateCost
                     Data.Array.Accelerate.BackendKit.Phase2.InlineCheap
                     Data.Array.Accelerate.BackendKit.Phase2.FuseMaps
                     Data.Array.Accelerate.BackendKit.Phase2.NormalizeExps
                     Data.Array.Accelerate.BackendKit.Phase2.OneDimensionalize
                     Data.Array.Accelerate.BackendKit.Phase2.SizeAnalysis
                     Data.Array.Accelerate.BackendKit.Phase2.ToCLike
                     Data.Array.Accelerate.BackendKit.Phase2.TrackUses
                     Data.Array.Accelerate.BackendKit.Phase2.UnzipETups
                     Data.Array.Accelerate.BackendKit.Phase3.KernFreeVars
                     Data.Array.Accelerate.BackendKit.Phase3.LowerGPUIR
                     Data.Array.Accelerate.BackendKit.Phase3.ToGPUIR

  Build-depends:
                        array           >= 0.3 && < 0.5,
                        mtl             >= 2.1,
                        pretty          >= 1.0 && < 1.2,
                        prettyclass,
                        base >= 4, ghc-prim,
                        containers,
                        accelerate      == 0.13.*,
                        GenericPretty   >= 1.0,
--                        symbol          >= 0.1.2,
--                        ghc             >= 7.2
                        vector          >= 0.9,
                        deepseq         >= 1.3,
                        test-framework, test-framework-hunit, HUnit,
                        split >= 0.2

Test-Suite test-accelerate-backend-kit
    type:       exitcode-stdio-1.0
    main-is:    Test.hs
--    ghc-options: -rtsopts -threaded
    build-depends: base >= 4, containers
--                 , array >= 0.3
--                 , deepseq >= 1.2
--                 , binary
--                 , QuickCheck, HUnit, time
                 , deepseq         >= 1.3
                 , test-framework, test-framework-hunit, HUnit
                 , split >= 0.2
