Name:                   accelerate-backend-kit
Version:                0.16.0.0
Cabal-version:          >= 1.10
Tested-with:            GHC == 7.8.*
Build-type:             Simple

Synopsis:               Simplified AST for constructing Accelerate backends.

Description:
  A simplified definition of the Accelerate AST, designed to make it easier to
  build new backends. For further information, refer to the main /Accelerate/
  package: <http://hackage.haskell.org/package/accelerate>
  .

License:                BSD3
License-file:           LICENSE
Maintainer:             Ryan R. Newton <rrnewton@gmail.com>
Author:                 Ryan R. Newton
                        Joel Svensson
                        Michael Vollmer
                        Trevor L. McDonell

Homepage:               https://github.com/AccelerateHS/accelerate-backend-kit/
Bug-reports:            https://github.com/AccelerateHS/accelerate-backend-kit/issues/

Category:               Compilers/Interpreters, Concurrency, Data, Parallelism
Stability:              Experimental

Library
  Exposed-modules:      Data.Array.Accelerate.BackendKit.Tests
                        Data.Array.Accelerate.BackendKit.ConsoleTester
                        Data.Array.Accelerate.BackendKit.CompilerPipeline
                        Data.Array.Accelerate.BackendKit.IRs.GPUIR
                        Data.Array.Accelerate.BackendKit.IRs.GPUIR.Interpreter
                        Data.Array.Accelerate.BackendKit.IRs.CLike
                        Data.Array.Accelerate.BackendKit.IRs.CLike.Interpreter
                        Data.Array.Accelerate.BackendKit.IRs.SimpleAcc
                        Data.Array.Accelerate.BackendKit.IRs.SimpleAcc.Interpreter
                        Data.Array.Accelerate.BackendKit.IRs.Metadata
                        Data.Array.Accelerate.BackendKit.SimpleArray

                        Data.Array.Accelerate.BackendKit.Phase1.LiftLets
                        Data.Array.Accelerate.BackendKit.Phase1.LiftComplexRands
                        Data.Array.Accelerate.BackendKit.Phase1.RemoveArrayTuple
                        Data.Array.Accelerate.BackendKit.Phase1.StaticTuples
                        Data.Array.Accelerate.BackendKit.Phase1.ToAccClone
                        Data.Array.Accelerate.BackendKit.Phase1.VerifySimpleAcc
                        Data.Array.Accelerate.BackendKit.Phase2.DeadCode
                        Data.Array.Accelerate.BackendKit.Phase2.DesugarUnit
                        Data.Array.Accelerate.BackendKit.Phase2.DesugToBackperm
                        Data.Array.Accelerate.BackendKit.Phase2.DesugToGenerate
                        Data.Array.Accelerate.BackendKit.Phase2.EstimateCost
                        Data.Array.Accelerate.BackendKit.Phase2.ExplicitShapes
                        Data.Array.Accelerate.BackendKit.Phase2.InlineCheap
                        Data.Array.Accelerate.BackendKit.Phase2.FuseMaps
                        Data.Array.Accelerate.BackendKit.Phase2.NormalizeExps
                        Data.Array.Accelerate.BackendKit.Phase2.OneDimensionalize
                        Data.Array.Accelerate.BackendKit.Phase2.SizeAnalysis
                        Data.Array.Accelerate.BackendKit.Phase2.ToCLike
                        Data.Array.Accelerate.BackendKit.Phase2.TrackUses
                        Data.Array.Accelerate.BackendKit.Phase2.UnzipETups
                        Data.Array.Accelerate.BackendKit.Phase2.UnzipArrays
                        Data.Array.Accelerate.BackendKit.Phase3.KernFreeVars
                        Data.Array.Accelerate.BackendKit.Phase3.FuseGenReduce
                        Data.Array.Accelerate.BackendKit.Phase3.DesugarGenerate
                        Data.Array.Accelerate.BackendKit.Phase3.DesugarFoldScan
                        Data.Array.Accelerate.BackendKit.Phase3.ToGPUIR

                        -- These will move to another package:
                        Data.Array.Accelerate.BackendClass

                        -- RRN TEMP/FIXME: disabling now for GHC 7.8, but need to fix it
                        -- Data.Array.Accelerate.DynamicAcc
                        Data.Array.Accelerate.DynamicAcc2

                        -- Temporarily exposed:
                        Data.Array.Accelerate.BackendKit.IRs.Internal.AccClone
                        Data.Array.Accelerate.BackendKit.Utils.Helpers

  -- Modules not exported by this package:
  Other-modules:

  Build-depends:        accelerate                      == 0.16.*,
                        array                           >= 0.3,
                        base                            >= 4,
                        bytestring,
                        containers,
                        deepseq                         >= 1.3,
                        GenericPretty                   >= 1.0,
                        ghc-prim,
                        HUnit,
                        mtl,
                        pretty                          >= 1.0 && < 1.2,
                        prettyclass,
                        primitive,
                        random                          >= 1.0,
                        split                           >= 0.2,
                        test-framework,
                        test-framework-hunit,
                        time                            >= 1.4,
                        vector                          >= 0.9

  ghc-options:          -O2 -threaded -Wall
  Default-Language:     Haskell2010


-- Internal unit tests:
--
Test-suite test-accelerate-backend-kit-unittests
  type:                 exitcode-stdio-1.0
  main-is:              UnitTests.hs
  hs-source-dirs:       tests/
  ghc-options:          -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:     Haskell2010

  build-depends:        accelerate                      == 0.16.*,
                        accelerate-backend-kit          == 0.16.*,
                        array                           >= 0.3,
                        base                            >= 4,
                        bytestring,
                        containers,
                        deepseq                         >= 1.3,
                        GenericPretty                   >= 1.0,
                        ghc-prim,
                        HUnit,
                        mtl,
                        pretty                          >= 1.0 && < 1.2,
                        primitive,
                        random                          >= 1.0,
                        split                           >= 0.2,
                        test-framework,
                        test-framework-hunit,
                        time                            >= 1.4


-- "System" tests of the entire backend-kit compiler & interpreter.
--
Test-suite test-accelerate-backend-kit-simple-interp
  type:                 exitcode-stdio-1.0
  main-is:              TestSimpleAccInterp.hs
  hs-source-dirs:       tests/
  ghc-options:          -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:     Haskell2010
  build-depends:        accelerate                      == 0.16.*,
                        accelerate-backend-kit          == 0.16.*,
                        array                           >= 0.3,
                        base                            >= 4,
                        bytestring,
                        containers,
                        deepseq                         >= 1.3,
                        GenericPretty                   >= 1.0,
                        ghc-prim,
                        HUnit,
                        mtl,
                        pretty                          >= 1.0 && < 1.2,
                        primitive,
                        random                          >= 1.0,
                        split                           >= 0.2,
                        test-framework,
                        test-framework-hunit,
                        time                            >= 1.4


-- This doesn't really test correctness, because the main accelerate
-- interpreter IS our reference implementation.  It just makes sure
-- that all test programs go through without error.
--
Test-Suite test-accelerate-main-interp
  type:                 exitcode-stdio-1.0
  main-is:              TestInterp.hs
  hs-source-dirs:       tests/
  ghc-options:          -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:     Haskell2010
  build-depends:        accelerate                      == 0.16.*,
                        accelerate-backend-kit          == 0.16.*,
                        array                           >= 0.3,
                        base                            >= 4,
                        bytestring,
                        containers,
                        deepseq                         >= 1.3,
                        GenericPretty                   >= 1.0,
                        ghc-prim,
                        HUnit,
                        mtl,
                        pretty                          >= 1.0 && < 1.2,
                        primitive,
                        random                          >= 1.0,
                        split                           >= 0.2,
                        test-framework,
                        test-framework-hunit,
                        time                            >= 1.4

-- Unit tests for the DynamicAcc2 conversion process.
--
Test-Suite test-dynamic-acc
  type:                 exitcode-stdio-1.0
  main-is:              TestDynamicAcc.hs
  hs-source-dirs:       tests/
  ghc-options:          -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:     Haskell2010
  build-depends:        accelerate                      == 0.16.*,
                        accelerate-backend-kit          == 0.16.*,
                        array                           >= 0.3,
                        base                            >= 4,
                        bytestring,
                        containers,
                        deepseq                         >= 1.3,
                        GenericPretty                   >= 1.0,
                        ghc-prim,
                        HUnit,
                        mtl,
                        pretty                          >= 1.0 && < 1.2,
                        primitive
                        random                          >= 1.0,
                        split                           >= 0.2,
                        test-framework,
                        test-framework-hunit,
                        test-framework-th,
                        time                            >= 1.4

-- Test of up and down conversions
Test-Suite test-accelerate-backend-kit-liftdrop-interp
  type:                 exitcode-stdio-1.0
  main-is:              TestLiftDrop.hs
  hs-source-dirs:       tests/
  ghc-options:          -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:     Haskell2010
  build-depends:        accelerate                      == 0.16.*,
                        accelerate-backend-kit          == 0.16.*
                        array                           >= 0.3,
                        base >= 4,
                        bytestring,
                        containers,
                        deepseq                         >= 1.3,
                        GenericPretty                   >= 1.0,
                        ghc-prim,
                        HUnit,
                        mtl,
                        pretty                          >= 1.0 && < 1.2,
                        primitive,
                        random                          >= 1.0,
                        split                           >= 0.2,
                        test-framework,
                        test-framework-hunit,
                        time                            >= 1.4

