Name:                accelerate-icc-opencl
Version:             0.13.0.0
Synopsis:            OpenCL and Cilk/ICC backends for Accelerate.

Homepage:            https://github.com/AccelerateHS/accelerate-cpu/
License:             BSD3
Author:              Ryan R. Newton
Maintainer:          rrnewton@gmail.com
Default-Language:    Haskell2010
Category:            Language

Build-type:          Simple

-- Extra files to be distributed with the package, such as examples or
-- a README.
-- Extra-source-files:  

-- Constraint on the version of Cabal needed to build this package.
Cabal-version:       >=1.10


Flag opencl
  Description:          Enable the OpenCL parallel backend
  Default:              False

Library
  Default-Language:    Haskell2010
  Exposed-modules:
                     Data.Array.Accelerate.Cilk                     
                     Data.Array.Accelerate.C

                     -- Temporarily exporting:
                     Data.Array.Accelerate.Shared.EmitC
                     Data.Array.Accelerate.Cilk.JITRuntime
                     
  -- Modules not exported by this package:
  Other-modules:  
                     Data.Array.Accelerate.Shared.EmitCommon
                     Data.Array.Accelerate.Shared.EmitHelpers
                     Data.Array.Accelerate.Shared.EasyEmit

  Build-depends:     base  == 4.*, containers >= 0.3, array, directory,  split,
                     test-framework, process, unix, 
                     mtl, pretty, prettyclass, GenericPretty,
                     accelerate, accelerate-backend-kit,
                     bytestring, ghc-prim, time

  if flag(opencl) {
    Exposed-modules:   Data.Array.Accelerate.OpenCL                     
    Other-modules:     Data.Array.Accelerate.Shared.EmitOpenCL
                       Data.Array.Accelerate.OpenCL.JITRuntime
    Build-depends:    OpenCL
    CPP-options:      -DENABLE_OPENCL
  }


Test-Suite test-accelerate-cpu
    type:       exitcode-stdio-1.0
    main-is:    Test.hs
    build-depends: base >= 4, containers, process, unix, array, directory
                 , deepseq         >= 1.3
                 , test-framework, test-framework-hunit, HUnit
                 , split >= 0.2
                 , mtl, pretty, prettyclass, GenericPretty
                 , accelerate-backend-kit, accelerate >= 0.13 
                 , bytestring, ghc-prim, time
    if flag(opencl)
      CPP-options:  -DENABLE_OPENCL
      build-depends: OpenCL
