Name:                accelerate-icc-opencl
Version:             0.15.0.0
Synopsis:            OpenCL and Cilk/ICC backends for Accelerate.

Homepage:            https://github.com/AccelerateHS/accelerate-cpu/
License:             BSD3
Author:              Ryan R. Newton
Maintainer:          rrnewton@gmail.com
Category:            Language

Build-type:          Simple

-- Extra files to be distributed with the package, such as examples or
-- a README.
-- Extra-source-files:  

-- Constraint on the version of Cabal needed to build this package.
Cabal-version:       >=1.10


Flag opencl
  Description:          Enable the OpenCL parallel backend
  Default:              False

Library
  Default-Language:    Haskell2010
  Exposed-modules:
                     Data.Array.Accelerate.Cilk                     
                     Data.Array.Accelerate.C

                     -- Temporarily exporting:
                     Data.Array.Accelerate.Shared.EmitC
                     Data.Array.Accelerate.Cilk.JITRuntime
                     
  -- Modules not exported by this package:
  Other-modules:  
                     Data.Array.Accelerate.Shared.EmitCommon
                     Data.Array.Accelerate.Shared.EmitHelpers
                     Data.Array.Accelerate.Shared.EasyEmit

  Build-depends:     base  == 4.*, random, containers >= 0.3, array, directory,  split,
                     test-framework, process, unix, 
                     mtl, pretty, prettyclass, GenericPretty,
                     accelerate >= 0.15,
                     accelerate-backend-kit >= 0.15,
                     bytestring, ghc-prim, time

  if flag(opencl) {
    Exposed-modules:   Data.Array.Accelerate.OpenCL                     
    Other-modules:     Data.Array.Accelerate.Shared.EmitOpenCL
                       Data.Array.Accelerate.OpenCL.JITRuntime
    Build-depends:    OpenCL
    CPP-options:      -DENABLE_OPENCL
  }


-- Three different test targets based on our three different backends/options:

Test-Suite test-accelerate-cpu-cilk
    type:       exitcode-stdio-1.0
    Default-Language:    Haskell2010
    cpp-options: -DUSECILK
    hs-source-dirs: tests/ ./
    main-is:    TestSeq.hs
    ghc-options: -threaded
    build-depends: base >= 4, containers, random, process, unix, array, directory
                 , deepseq         >= 1.3
                 , test-framework, test-framework-hunit, HUnit
                 , split >= 0.2
                 , mtl, pretty, prettyclass, GenericPretty
                 , accelerate-backend-kit >= 0.15.0.0
                 , accelerate >= 0.15.0.0
                 , bytestring, ghc-prim, time

Test-Suite test-accelerate-cpu-sequential
    type:       exitcode-stdio-1.0
    Default-Language:    Haskell2010
    main-is:    TestSeq.hs
    hs-source-dirs: tests/ ./
    ghc-options: -threaded -rtsopts -with-rtsopts=-N8
    build-depends: base >= 4, containers, random, process, unix, array, directory
                 , deepseq         >= 1.3
                 , test-framework, test-framework-hunit, HUnit
                 , split >= 0.2
                 , mtl, pretty, prettyclass, GenericPretty
                 , accelerate-backend-kit >= 0.15
                 , accelerate >= 0.15
                 , bytestring, ghc-prim, time

Test-Suite test-accelerate-cpu-unit-tests
    type:       exitcode-stdio-1.0
    Default-Language:    Haskell2010
    main-is:    UnitTests.hs
    hs-source-dirs: tests/ 
    ghc-options: -threaded -rtsopts -with-rtsopts=-N8
    build-depends: base >= 4, containers, random, process, unix, array, directory
                 , accelerate-icc-opencl, accelerate-backend-kit
                 , test-framework, test-framework-th, test-framework-hunit, HUnit
                 -- , deepseq         >= 1.3
                 -- , test-framework, test-framework-hunit, HUnit
                 -- , split >= 0.2
                 -- , mtl, pretty, prettyclass, GenericPretty
                 -- , accelerate-backend-kit >= 0.13.0.99
                 -- , accelerate >= 0.13.0.99
                 -- , bytestring, ghc-prim, time


Test-Suite test-accelerate-cpu-opencl
     type:       exitcode-stdio-1.0
     Default-Language:    Haskell2010
     main-is:    TestSeq.hs
     hs-source-dirs: tests/ ./
     ghc-options: -threaded
     build-depends: base >= 4, containers, random, process, unix, array, directory
                  , deepseq         >= 1.3
                  , test-framework, test-framework-hunit, HUnit
                  , split >= 0.2
                  , mtl, pretty, prettyclass, GenericPretty
                  , accelerate-backend-kit >= 0.15
                  , accelerate >= 0.15 
                  , bytestring, ghc-prim, time
     if flag(opencl) { 
       CPP-options:  -DENABLE_OPENCL
       build-depends: OpenCL
     } else {
       Buildable: False
     }
